--- a/FunctionDevelopment.Rmd
+++ b/FunctionDevelopment.Rmd
@@ -278,8 +278,27 @@ get_ll(X, Pf, fake_behaviorshortlist) ## wow great news the function works love 
 ## then we can have further arguments that get passed to fn (so that would be our X?)
 ## control is scaling it bc optim likes to minimize and we want to optimize
 
-fit <- optim(par = Pf, fn = function(par, X){
-  get_ll(X, par, fake_behaviorshortlist)}, X = fake_data, control = c(fnscale = -1))
+
+fit_MM <- function(X, behavior_list, par = matrix(1/length(behavior_list), 
+                                                  nrow = length(behavior_list), 
+                                                  ncol = length(behavior_list) - 1)){
+  fit <- optim(par = par, fn = function(par, X){
+    if(any(par < 0)) return(-Inf)
+    if(any(par > 1)) return(-Inf)
+    Pf <- matrix(par, nrow = length(behavior_list))
+    if(any(rowSums(Pf) > 1)) return(-Inf)
+    Pf <- cbind(Pf, 1 - rowSums(Pf))
+    rownames(Pf) <- colnames(Pf) <- behavior_list
+    get_ll(X, Pf, behavior_list)}, X = X, control = c(fnscale = -1))
+  
+  out <- fit$par
+  out <- cbind(out, 1 - rowSums(out))
+  rownames(out) <- colnames(out) <- behavior_list
+  return(out)
+}
+
+fit_MM(X, fake_behaviorshortlist)
+Pf
 
 ## what a fun number of NA warnings
 ## try next: not using the pf
@@ -290,7 +309,7 @@ row.names(initial_matrix_fake) <- fake_behaviorshortlist
 colnames(initial_matrix_fake) <- fake_behaviorshortlist
 
 fit <- optim(par = initial_matrix_fake, fn = function(par, X){
-  get_ll(X, par, fake_behaviorshortlist)}, X = fake_data, control = c(fnscale = -1))
+  get_ll(X, par, fake_behaviorshortlist)}, X = X, control = c(fnscale = -1))
 
 ## yeah thats not the problem here
 
