--- a/FunctionDevelopment.Rmd
+++ b/FunctionDevelopment.Rmd
@@ -380,23 +380,27 @@ tm5
 fake_behaviors5.0 <- c("move", "feed", "aggresive", "vigilance", "move", "sleep", "vigilance",
                      "feed", "sleep", "move", "sleep", "move", "aggresive", "vigilance",
                      "sleep", "move", "feed", "move", "feed", "aggressive", "move",
-                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", "vigilance",
+                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", 
+                     "vigilance", "move", "sleep", "vigilance",
+                     "feed", "sleep", "move", "sleep", "move", "aggresive", "vigilance",
+                     "sleep", "move", "feed", "move", "feed", "aggressive", "move",
+                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", 
+                     "vigilance",
                      "move", "sleep", "vigilance",
                      "feed", "sleep", "move", "sleep", "move", "aggresive", "vigilance",
                      "sleep", "move", "feed", "move", "feed", "aggressive", "move",
-                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", "vigilance",
+                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", 
+                     "vigilance",
                      "move", "sleep", "vigilance",
                      "feed", "sleep", "move", "sleep", "move", "aggresive", "vigilance",
                      "sleep", "move", "feed", "move", "feed", "aggressive", "move",
-                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", "vigilance",
+                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", 
+                     "vigilance",
                      "move", "sleep", "vigilance",
                      "feed", "sleep", "move", "sleep", "move", "aggresive", "vigilance",
                      "sleep", "move", "feed", "move", "feed", "aggressive", "move",
-                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", "vigilance",
-                     "move", "sleep", "vigilance",
-                     "feed", "sleep", "move", "sleep", "move", "aggresive", "vigilance",
-                     "sleep", "move", "feed", "move", "feed", "aggressive", "move",
-                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", "vigilance",
+                     "aggressive", "move", "feed", "move", "sleep", "move", "feed", "aggresive", 
+                     "vigilance",
                      "move", "sleep", "vigilance",
                      "feed", "sleep", "move", "sleep", "move", "aggresive", "vigilance",
                      "sleep", "move", "feed", "move", "feed", "aggressive", "move",
@@ -414,17 +418,22 @@ fake_duration5.0 <- c(10, 20, 7, 10, 5, 140, 30, 25, 250, 30, 30, 60, 15, 10, 20
                     200, 23, 78, 20, 
                     45, 90, 20, 10, 45, 45, 30, 10) 
 fake_data5.0 <- data.frame(fake_duration5.0, fake_behaviors5.0)
-colnames(fake_data5) <- c("TimeSpent", "Behavior") 
+colnames(fake_data5.0) <- c("TimeSpent", "Behavior") 
 fake_behaviorlist5 <- c("move", "sleep", "feed", "vigilance", "aggressive")
 
-test5 <- fit_MM(fake_data5.0, fake_behaviorlist5)
-test5
+test5.0 <- fit_MM(fake_data5.0, fake_behaviorlist5, par = initial)
+test5.0
 
 ## accuracy check 
-tm5 <- matrixfunct(fake_data5.0, fake_behaviorlist5)
-tm5
+tm5.0 <- matrixfunct(fake_data5.0, fake_behaviorlist5)
+tm5.0
+
+behavior_list <- fake_behaviorlist5
+
+initial <- 0.1*(1/(length(behavior_list) - 1))*matrix(1, nrow = length(behavior_list), ncol = length(behavior_list)) + (0.9 - (0.1*1/(length(behavior_list) - 1)))*diag(length(behavior_list))
+
+initial <- initial[, 1:(length(behavior_list)-1)]
 ```
-i broke it??? i thought this issue was resolved idk whats up here?????? like the original function not the modified one later :(
 
 
 
@@ -500,12 +509,13 @@ test5.1 <- get_ll_row(fake_data5, fake_p_row5, "feed", fake_behaviorlist5)
 - currently running into issues i think with like naming??? its not working somewhere bc of choosing the singular row i need for the P
 ```{r}
 ## still need to add uncertainty
+
 fit_MM <- function(data, behavior_list, par = matrix(1/length(behavior_list), 
                                                      nrow = length(behavior_list), 
                                                      ncol = length(behavior_list) - 1), 
                    maxit = 500, rowwise = T){
   if(!isTRUE(rowwise)){
-    fit <- optim(par = par, fn = function(par, data){
+    fit <- optim(par = par, method = "SANN" ,fn = function(par, data){
       if(any(par < 0)) return(-Inf)
       if(any(par > 1)) return(-Inf)
       Pf <- matrix(par, nrow = length(behavior_list))
@@ -520,31 +530,26 @@ fit_MM <- function(data, behavior_list, par = matrix(1/length(behavior_list),
     return(out)
     
   } else if(isTRUE(rowwise)){
-    out <- c()
+    out <- matrix(NA, nrow = length(behavior_list), ncol = length(behavior_list))
+    rownames(out) <- colnames(out) <- behavior_list
+    rownames(par) <- behavior_list
     for(b1 in behavior_list){
-      fit <- optim(par = par, fn = function(par, data){
+      par_row <- par[b1, ]
+      fit <- optim(par = par_row, method = "SANN", fn = function(par, data){
         if(any(par < 0)) return(-Inf)
         if(any(par > 1)) return(-Inf)
-        Pf <- matrix(par, nrow = length(behavior_list)) 
-          ## this being the full matrix here makes me feel like im not actually optimizing by row
-        if(any(rowSums(Pf) > 1)) return(-Inf)
-        Pf <- cbind(Pf, 1 - rowSums(Pf))
-        rownames(Pf) <- colnames(Pf) <- behavior_list
-        Pf <- Pf[b1, ] ## this is where its not working rn, is it bc b1 is a string not a number??
-                       ## but it is the string that is the name of the row so idk 
-        get_ll_row(X, Pf, row_behavior = b1, behavior_list)}, data = data, ## not sure about the b1 here 
+        if(sum(par) > 1) return(-Inf)
+        p_row <- c(par, 1 - sum(par))
+        names(p_row) <- behavior_list
+        get_ll_row(X, p_row, row_behavior = b1, behavior_list)}, data = data,  
         control = c(fnscale = -1, maxit = maxit))
    
        row_out <- fit$par
-       row_out <- cbind(row_out, 1 - rowSums(row_out))
-       rownames(row_out) <- behavior_list 
-       colnames(row_out) <- behavior_list
-       
-       out <- rbind(out, row_out)
-       
+       row_out <- c(row_out, 1 - sum(row_out))
+      
+       out[b1, ] <- row_out
     }
     
-    rownames(out) <- colnames(out) <- behavior_list ## this is where its having issues???? why????
     return(out)
   }
 }
